--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						
 					</div>
 					<div class="header-right">
-						<a href="_v2/index.html" class="login">_v2/index.html</a>
+						<a href="https://onoprienko.github.io/real.school_build_v2/" class="login">V2 build</a>
 						<a href="#" class="login">Log in</a>
 						<a href="#lessons" class="btn btn--small btn--info">Order now</a>
 						<!-- <a href="#" class="cart"><i class="icon-cart"></i><span class="count">1</span></a> -->
@@ -72,46 +72,47 @@
 			</div>
 		</div>
 		<div class="animation-holder">
-			<img class="anim anim_01" src="img/_01.svg">
-			<img class="anim anim_02" src="img/_02.svg">
-			<img class="anim anim_03" src="img/_03.svg">
-			<img class="anim anim_04" src="img/_04.svg">
-			<img class="anim anim_05" src="img/_05.svg">
-			<img class="anim anim_06" src="img/_06.svg">
-			<img class="anim anim_07" src="img/_07.svg">
-			<img class="anim anim_08" src="img/_08.svg">
-			<img class="anim anim_09" src="img/_09.svg">
-			<img class="anim anim_10" src="img/_10.svg">
-			<img class="anim anim_11" src="img/_11.svg">
-			<img class="anim anim_12" src="img/_12.svg">
-			<img class="anim anim_13" src="img/_13.svg">
-			<img class="anim anim_14" src="img/_14.svg">
-			<img class="anim anim_15" src="img/_15.svg">
-			<img class="anim anim_16" src="img/_16.svg">
-			<img class="anim anim_17" src="img/_17.svg">
-			<img class="anim anim_18" src="img/_18.svg">
-			<img class="anim anim_19" src="img/_19.svg">
-			<img class="anim anim_20" src="img/_20.svg">
-			<img class="anim anim_01" src="img/_01.svg">
-			<img class="anim anim_02" src="img/_02.svg">
-			<img class="anim anim_03" src="img/_03.svg">
-			<img class="anim anim_04" src="img/_04.svg">
-			<img class="anim anim_05" src="img/_05.svg">
-			<img class="anim anim_06" src="img/_06.svg">
-			<img class="anim anim_07" src="img/_07.svg">
-			<img class="anim anim_08" src="img/_08.svg">
-			<img class="anim anim_09" src="img/_09.svg">
-			<img class="anim anim_10" src="img/_10.svg">
-			<img class="anim anim_11" src="img/_11.svg">
-			<img class="anim anim_12" src="img/_12.svg">
-			<img class="anim anim_13" src="img/_13.svg">
-			<img class="anim anim_14" src="img/_14.svg">
-			<img class="anim anim_15" src="img/_15.svg">
-			<img class="anim anim_16" src="img/_16.svg">
-			<img class="anim anim_17" src="img/_17.svg">
-			<img class="anim anim_18" src="img/_18.svg">
-			<img class="anim anim_19" src="img/_19.svg">
-			<img class="anim anim_20" src="img/_20.svg">
+			<img class="anim anim_01" src="img/1_01.svg">
+			<img class="anim anim_02" src="img/1_02.svg">
+			<img class="anim anim_03" src="img/1_03.svg">
+			<img class="anim anim_04" src="img/1_04.svg">
+			<img class="anim anim_05" src="img/1_05.svg">
+			<img class="anim anim_06" src="img/1_06.svg">
+			<img class="anim anim_07" src="img/1_07.svg">
+			<img class="anim anim_08" src="img/1_08.svg">
+			<img class="anim anim_09" src="img/1_09.svg">
+			<img class="anim anim_10" src="img/1_10.svg">
+			<img class="anim anim_11" src="img/1_11.svg">
+			<img class="anim anim_12" src="img/1_12.svg">
+			<img class="anim anim_13" src="img/1_13.svg">
+			<img class="anim anim_14" src="img/1_14.svg">
+			<img class="anim anim_15" src="img/1_15.svg">
+			<img class="anim anim_16" src="img/1_16.svg">
+			<img class="anim anim_17" src="img/1_17.svg">
+			<img class="anim anim_18" src="img/1_18.svg">
+			<img class="anim anim_19" src="img/1_19.svg">
+			<img class="anim anim_20" src="img/1_20.svg">
+			<img class="anim anim_01" src="img/1_01.svg">
+			<img class="anim anim_02" src="img/1_02.svg">
+			<img class="anim anim_03" src="img/1_03.svg">
+			<img class="anim anim_04" src="img/1_04.svg">
+			<img class="anim anim_05" src="img/1_05.svg">
+			<img class="anim anim_06" src="img/1_06.svg">
+			<img class="anim anim_07" src="img/1_07.svg">
+			<img class="anim anim_08" src="img/1_08.svg">
+			<img class="anim anim_09" src="img/1_09.svg">
+			<img class="anim anim_10" src="img/1_10.svg">
+			<img class="anim anim_11" src="img/1_11.svg">
+			<img class="anim anim_12" src="img/1_12.svg">
+			<img class="anim anim_13" src="img/1_13.svg">
+			<img class="anim anim_14" src="img/1_14.svg">
+			<img class="anim anim_15" src="img/1_15.svg">
+			<img class="anim anim_16" src="img/1_16.svg">
+			<img class="anim anim_17" src="img/1_17.svg">
+			<img class="anim anim_18" src="img/1_18.svg">
+			<img class="anim anim_19" src="img/1_19.svg">
+			<img class="anim anim_20" src="img/1_20.svg">
+	
 			<div class="anim_21"></div>
 		</div>
 	</section>
